// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > should render checked state correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-eDLKkx bXwzQb regen-checkbox"
        role="checkbox"
        tabindex="0"
      >
        <div
          class="regen-checkbox-wrapper"
        >
           
          <div
            class="regen-checkbox-box"
          >
            <div
              aria-hidden="true"
              class="sc-jIBlqr khsxkQ regen-wave "
              role="wave"
              type="default"
            />
            <div
              class="regen-checkbox-icon"
              style="transform: scale(0) translateZ(0);"
            >
              <i
                class="sc-fmKFGs fekwRS regen-icon regen-icon-check"
                color="currentColor"
                role="icon"
              >
                <svg
                  aria-hidden="true"
                  data-icon="check"
                  style="width: 1em; height: 1em;"
                  viewBox="0 0 507.506 507.506"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M163.865,436.934c-14.406,0.006-28.222-5.72-38.4-15.915L9.369,304.966c-12.492-12.496-12.492-32.752,0-45.248l0,0   c12.496-12.492,32.752-12.492,45.248,0l109.248,109.248L452.889,79.942c12.496-12.492,32.752-12.492,45.248,0l0,0   c12.492,12.496,12.492,32.752,0,45.248L202.265,421.019C192.087,431.214,178.271,436.94,163.865,436.934z"
                    />
                  </g>
                </svg>
              </i>
            </div>
            <div
              class="regen-checkbox-box__border"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-eDLKkx bXwzQb regen-checkbox"
      role="checkbox"
      tabindex="0"
    >
      <div
        class="regen-checkbox-wrapper"
      >
         
        <div
          class="regen-checkbox-box"
        >
          <div
            aria-hidden="true"
            class="sc-jIBlqr khsxkQ regen-wave "
            role="wave"
            type="default"
          />
          <div
            class="regen-checkbox-icon"
            style="transform: scale(0) translateZ(0);"
          >
            <i
              class="sc-fmKFGs fekwRS regen-icon regen-icon-check"
              color="currentColor"
              role="icon"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                style="width: 1em; height: 1em;"
                viewBox="0 0 507.506 507.506"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M163.865,436.934c-14.406,0.006-28.222-5.72-38.4-15.915L9.369,304.966c-12.492-12.496-12.492-32.752,0-45.248l0,0   c12.496-12.492,32.752-12.492,45.248,0l109.248,109.248L452.889,79.942c12.496-12.492,32.752-12.492,45.248,0l0,0   c12.492,12.496,12.492,32.752,0,45.248L202.265,421.019C192.087,431.214,178.271,436.94,163.865,436.934z"
                  />
                </g>
              </svg>
            </i>
          </div>
          <div
            class="regen-checkbox-box__border"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox > should render custom size correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-eDLKkx kOktTj regen-checkbox regen-checkbox--small"
        role="checkbox"
        tabindex="0"
      >
        <div
          class="regen-checkbox-wrapper"
        >
           
          <div
            class="regen-checkbox-box"
          >
            <div
              aria-hidden="true"
              class="sc-jIBlqr khsxkQ regen-wave "
              role="wave"
              type="default"
            />
            <div
              class="regen-checkbox-icon"
              style="transform: scale(0) translateZ(0);"
            />
            <div
              class="regen-checkbox-box__border"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-eDLKkx kOktTj regen-checkbox regen-checkbox--small"
      role="checkbox"
      tabindex="0"
    >
      <div
        class="regen-checkbox-wrapper"
      >
         
        <div
          class="regen-checkbox-box"
        >
          <div
            aria-hidden="true"
            class="sc-jIBlqr khsxkQ regen-wave "
            role="wave"
            type="default"
          />
          <div
            class="regen-checkbox-icon"
            style="transform: scale(0) translateZ(0);"
          />
          <div
            class="regen-checkbox-box__border"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox > should render disabled state correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-eDLKkx iRVmvr regen-checkbox regen-checkbox--disabled"
        disabled=""
        role="checkbox"
        tabindex="0"
      >
        <div
          class="regen-checkbox-wrapper"
        >
           
          <div
            class="regen-checkbox-box"
          >
            <div
              aria-hidden="true"
              class="sc-jIBlqr khsxkQ regen-wave "
              role="wave"
              type="default"
            />
            <div
              class="regen-checkbox-icon"
              style="transform: scale(0) translateZ(0);"
            />
            <div
              class="regen-checkbox-box__border"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-eDLKkx iRVmvr regen-checkbox regen-checkbox--disabled"
      disabled=""
      role="checkbox"
      tabindex="0"
    >
      <div
        class="regen-checkbox-wrapper"
      >
         
        <div
          class="regen-checkbox-box"
        >
          <div
            aria-hidden="true"
            class="sc-jIBlqr khsxkQ regen-wave "
            role="wave"
            type="default"
          />
          <div
            class="regen-checkbox-icon"
            style="transform: scale(0) translateZ(0);"
          />
          <div
            class="regen-checkbox-box__border"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox > should render indeterminate state correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-eDLKkx bXwzQb regen-checkbox regen-checkbox--indeterminate"
        role="checkbox"
        tabindex="0"
      >
        <div
          class="regen-checkbox-wrapper"
        >
           
          <div
            class="regen-checkbox-box"
          >
            <div
              aria-hidden="true"
              class="sc-jIBlqr khsxkQ regen-wave "
              role="wave"
              type="default"
            />
            <div
              class="regen-checkbox-icon"
              style="transform: scale(0) translateZ(0);"
            >
              <i
                class="sc-fmKFGs fekwRS regen-icon regen-icon-minus"
                color="currentColor"
                role="icon"
              >
                <svg
                  aria-hidden="true"
                  data-icon="minus"
                  style="width: 1em; height: 1em;"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="2"
                    rx="1"
                    width="24"
                    y="11"
                  />
                </svg>
              </i>
            </div>
            <div
              class="regen-checkbox-box__border"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-eDLKkx bXwzQb regen-checkbox regen-checkbox--indeterminate"
      role="checkbox"
      tabindex="0"
    >
      <div
        class="regen-checkbox-wrapper"
      >
         
        <div
          class="regen-checkbox-box"
        >
          <div
            aria-hidden="true"
            class="sc-jIBlqr khsxkQ regen-wave "
            role="wave"
            type="default"
          />
          <div
            class="regen-checkbox-icon"
            style="transform: scale(0) translateZ(0);"
          >
            <i
              class="sc-fmKFGs fekwRS regen-icon regen-icon-minus"
              color="currentColor"
              role="icon"
            >
              <svg
                aria-hidden="true"
                data-icon="minus"
                style="width: 1em; height: 1em;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="2"
                  rx="1"
                  width="24"
                  y="11"
                />
              </svg>
            </i>
          </div>
          <div
            class="regen-checkbox-box__border"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox > should trigger onChange event 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-eDLKkx kOktTj regen-checkbox"
        role="checkbox"
        tabindex="0"
      >
        <div
          class="regen-checkbox-wrapper"
        >
           
          <div
            class="regen-checkbox-box"
          >
            <div
              aria-hidden="true"
              class="sc-jIBlqr khsxkQ regen-wave "
              role="wave"
              type="default"
            />
            <div
              class="regen-checkbox-icon"
              style="transform: scale(0) translateZ(0);"
            />
            <div
              class="regen-checkbox-box__border"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-eDLKkx kOktTj regen-checkbox"
      role="checkbox"
      tabindex="0"
    >
      <div
        class="regen-checkbox-wrapper"
      >
         
        <div
          class="regen-checkbox-box"
        >
          <div
            aria-hidden="true"
            class="sc-jIBlqr khsxkQ regen-wave "
            role="wave"
            type="default"
          />
          <div
            class="regen-checkbox-icon"
            style="transform: scale(0) translateZ(0);"
          />
          <div
            class="regen-checkbox-box__border"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
